--- a/module-header/src/index.html
+++ b/module-header/src/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
+    <script src= "https://cdn.jsdelivr.net/npm/axios@0.19.0/dist/axios.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
     <title>header</title>
 </head>
 <body>
     <div class="container">
         <h1>Header app</h1>
+        <div id="list" class="list"></div>
     </div>
 </body>
 </html>
