--- a/main-app/index.html
+++ b/main-app/index.html
@@ -1,19 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>App</title>
-    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15"></script>
-    <script src="https://cdn.jsdelivr.net/npm/fabric@3.5.1"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fabric@3.5.1/dist/fabric.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/echarts@4.5.0/dist/echarts.js"></script>
-    <script src = 'footer.js'></script>
-    <link rel="stylesheet" href="footer.css">
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
+    <script src= "https://cdn.jsdelivr.net/npm/axios@0.19.0/dist/axios.min.js"></script>
+    <script defer src = 'footer/script.js'></script>
+    <script defer src = 'header/script.js'></script>
+    <script defer src = 'box-1/script.js'></script>
+    <link rel="stylesheet" href="footer/style.css">
+    <link rel="stylesheet" href="header/style.css">
+    <link rel="stylesheet" href="box-1/style.css">
 </head>
 <body>
     <h1>MAIN APP</h1>
-    <div class="container">
+    <div class="header--container">
+        <h1>Header app</h1>
+        <div id="list" class="header--list"></div>
+    </div>
+    <div class="box-1--container">
+        <h1>Box-1 app</h1>
+        <table>
+            <tr>
+              <th>Company</th>
+              <th>Contact</th>
+              <th>Country</th>
+            </tr>
+            <tr>
+              <td>Alfreds Futterkiste</td>
+              <td>Maria Anders</td>
+              <td>Germany</td>
+            </tr>
+            <tr>
+              <td>Centro comercial Moctezuma</td>
+              <td>Francisco Chang</td>
+              <td>Mexico</td>
+            </tr>
+            <tr>
+              <td>Ernst Handel</td>
+              <td>Roland Mendel</td>
+              <td>Austria</td>
+            </tr>
+            <tr>
+              <td>Island Trading</td>
+              <td>Helen Bennett</td>
+              <td>UK</td>
+            </tr>
+            <tr>
+              <td>Laughing Bacchus Winecellars</td>
+              <td>Yoshi Tannamuri</td>
+              <td>Canada</td>
+            </tr>
+            <tr>
+              <td>Magazzini Alimentari Riuniti</td>
+              <td>Giovanni Rovelli</td>
+              <td>Italy</td>
+            </tr>
+          </table>
+          
+    </div>
+    <div class="footer--container">
         <h1>Footer app</h1>
     </div>
 </body>
