--- a/module-header/src/index.html
+++ b/module-header/src/index.html
@@ -1,18 +1,5 @@
-  
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.scss">
-    <script src="script.js"></script>
-    <title>header</title>
-</head>
-<body>
-    <div class="container">
-        <h1>Header app</h1>
-        <div id="list" class="list"></div>
-    </div>
-</body>
-</html>
+<div classname="container">
+	<h1>Header app</h1>
+	<div classname="list">L1</div>
+	<div classname="list">L2</div>
+</div>
