--- a/module-header/module/main.html
+++ b/module-header/module/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     	<link rel="stylesheet" href="./src/style.css" module>
-    <title>Document</title>
+    <title>Header module</title>
 </head>
 <body>
     <module href = "./src/index.html"></module>
