--- a/module-header/src/index.html
+++ b/module-header/src/index.html
@@ -1,5 +1,5 @@
 <div classname="container">
 	<h1>Header app</h1>
-	<div classname="list">L1</div>
+	<div id = 'list' classname="list">L1</div>
 	<div classname="list">L2</div>
 </div>
